[tool.poetry]
name = "k8s-ingress-ddns"
version = "0.1.0"
description = ""
authors = ["nonylene <nonylene@gmail.com>"]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "*"
click = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
